# Machine_Learning_360V2

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: growth_predictor_features.csv  health_score_features.csv  synthetic_onboarding_data.csv  synthetic_onboarding_features.csv  synthetic_sme_agents_data.csv
docs/: mkdocs.yml
docs/docs/: index.md
machine_learning_360v2/: __init__.py  app.py  config.py  dataset.py  features.py  plots.py
machine_learning_360v2/modeling/: predict.py  train.py
machine_learning_360v2/modeling/Compliance model/: compliance_model.py
machine_learning_360v2/modeling/Compliance_model/: compliance_features.py  compliance_score_sme.py
machine_learning_360v2/modeling/Compliance_model/compliance_feature_set/: X_compliance.csv  categorical_encoder.joblib  compliance_decisions.csv  numeric_scaler.joblib  y_default_risk.csv  y_eligible_for_funding.csv
machine_learning_360v2/modeling/Health_score_model/: health_growth_predict.py  health_score_features.py  health_score_model.py  health_score_predict.py
machine_learning_360v2/modeling/Health_score_model/health_score_feature_set/: health_decisions.csv
machine_learning_360v2/modeling/funding_model/: eda.ipynb  funding-features.py  funding_model.py  funding_predict.py
machine_learning_360v2/modeling/growth_predictor_model/: growth_features.py  growth_predict.py  growth_predictor.py
models/health_score_model/: best_health_score_model.pkl
notebooks/: EDA.ipynb
(+1 files in other folders)
